# todo_list

./: .gitignore  README.md
backend/: app.py  cli.py  models.py  pyproject.toml  test.html  todo.txt
backend/routes/: tasks.py
frontend/: package-lock.json  package.json
frontend/.next/: BUILD_ID  app-build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/cache/eslint/: .cache_199fcia
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: _not-found.html  _not-found.rsc  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
frontend/.next/server/chunks/: 127.js  [root of the server]__427628._.js.map  node_modules_next_425054._.js.map
frontend/.next/server/pages/: 500.html
frontend/.next/static/chunks/: [next]_internal_font_google_roboto_459e61e0_module_b52d8e.css  [next]_internal_font_google_roboto_459e61e0_module_b52d8e.css.map  [root of the server]__194484._.css  [root of the server]__194484._.css.map  [root of the server]__31723f._.js  [root of the server]__31723f._.js.map  [root of the server]__34c62c._.css  [root of the server]__4ffff0._.css  [root of the server]__4ffff0._.css.map  [root of the server]__84a5ce._.css  [root of the server]__8f1948._.css  (+64 more)
frontend/src/app/: layout.module.css  layout.tsx  page.module.css  page.tsx
frontend/src/styles/: globals.css  page.module.css
(+143 files in other folders)
